@@ -54,7 +54,8 @@ option may be given.
 To turn off backward components, use the
 .I \-backward
 option.
-Computing both components takes about twice as long as one component.
+Computing both components takes about twice as long as one component, but
+is recommended when rays will be impinging from either side.
 .PP
 The geometry must fit a rectangular profile, whose width is along the X-axis,
 height is in the Y-axis, and depth is in the Z-axis.
